hide node modules

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-project
 /tests/tests/
 /tests/results/
+
+# Node elements
+node_modules
+package.json
+package-lock.json
