crud et ajout date payement

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /tests/tests/
 /tests/results/
 
-
+# Node elements
+node_modules
+package.json
+package-lock.json
